[package]
authors = ["Robert Collins <robert.collins@cognite.com>"]
categories = ["command-line-utilities"]
description = "Simple converter from victoria metrics exports to open metrics expositions"
edition = "2018"
homepage = "https://github.com/cognitedata/victoriametrics2openmetrics"
keywords = ["prometheus", "victoriametrics", "backfill"]
license = "Apache-2.0"
name = "victoriametrics2openmetrics"
readme = "README.md"
repository = "https://github.com/cognitedata/victoriametrics2openmetrics"
version = "0.1.0"

[badges]
[badges.maintenance]
status = "experimental"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
